--- a/api/api-deployment.yaml
+++ b/api/api-deployment.yaml
@@ -25,3 +25,8 @@ spec:
                 configMapKeyRef:
                   name: api-configmap
                   key: database-url
+          resources:
+            limits:
+              cpu: 500m
+            requests:
+              cpu: 200m
