--- a/redis/redis-service.yaml
+++ b/redis/redis-service.yaml
@@ -1,16 +1,3 @@
-# apiVersion: v1
-# kind: Service
-# metadata:
-#     name: redis-service
-#     namespace: database
-# spec:
-#     selector:
-#         app: redis
-#     ports:
-#         - protocol: TCP
-#           port: 6379
-#           targetPort: 6379
-
 apiVersion: v1
 kind: Service
 metadata:
@@ -19,11 +6,13 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-    - port: 6379
-      targetPort: 6379
+    - protocol: TCP
       name: client
-    - port: 16379
-      targetPort: 16379
+      port: 6379
+      targetPort: 6379
+    - protocol: TCP
       name: gossip
+      port: 16379
+      targetPort: 16379
   selector:
     app: redis-sts
